Updated Reservation service and tests